--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <p></p>
-                            <p>Passionate about new technologies, and sport fishing as a way of life. Improving every day in programming for iOS apps (Swift) and the development of PHP backends to feed the apps</p>
+                            <p>Passionated about new technologies, and sport fishing as a way of life. Improving every day in programming for iOS apps (Swift) and the development of PHP backends to feed the apps</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
